style : client edits

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
           <div
             class="user-navbar col-1 col-md-2 d-flex align-items-center gap-2"
-            onclick="window.location.href='auth.html'"
+            onclick="window.location.href='login.html'"
           >
             <svg
               width="38"
@@ -233,6 +233,7 @@
             class="navbar-toggler me-auto"
             type="button"
             data-bs-toggle="collapse"
+            ؤ
             data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
@@ -282,7 +283,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="./images/herocarousel1.jpg"
+                src="./images/herocarousel4.jpg"
                 class="d-block w-100"
                 alt=""
               />
@@ -886,7 +887,7 @@
           class="container d-flex flex-column flex-lg-row justify-content-between align-items-center"
         >
           <div class="col-12 col-lg-4 py-5 text-center text-lg-end">
-            <p class="ad-title">التجار الأكثر طلبا</p>
+            <p class="ad-title">التجار الأكثر مبيعًـا</p>
             <p class="ad-subtitle">تسوق الآن من عروضهم الحصرية لهذا الأسبوع</p>
           </div>
           <div
