--- a/profile.html
+++ b/profile.html
@@ -246,22 +246,33 @@
 		<div class="aud">
 	<div class="container edit-profile-page">
 		<div class="row">
-			<div class="col-12 col-md-6 col-lg-6 order-1 order-md-2">
-				<img src="images/pic2.png" alt="dgddfhd" />
-			</div>
-			<div class="col-12 col-md-6 col-lg-6 order-2 order-md-1  align-items-center">
+			<div class="col-12 col-md-6 col-lg-6 align-items-center">
 				<div class="first-name-label">الأسم الأول</div>
 				<div class="first-name">أحمد</div>
 				<div class="last-name-label">الأسم الأخير</div>
 				<div class="last-name">محمد</div>
 				<div class="email-label">البريد الألكترونى</div>
 				<div class="email">info@gmail.com</div>
-		
-				<div class="profile-title-label">العنوان</div>
+				<div class="profile-title-label">عنوان 1</div>
 				<div class="profile-title">الأسكندرية </div>
+				<div class="profile-title-label">عنوان 2</div>
+				<div class="profile-title">الأسكندرية </div>
+				<div class="profile-title-label">رقم التليفون</div>
+				<div class="profile-title">01111111111 </div>
 				<div class="edit-container">
 					<button class="btn-edit" onclick="editProfile()">تعديل</button>
 				</div>
+			</div>
+			<div class="col-12 col-md-6 profile-image-wrapper">
+				  <img
+                  src="./images/logoWhite.png"
+                  class="img-fluid"
+                  style="width: 250px; aspect-ratio: 1;"> "
+                />
+              <!-- <p class="text-white fs-2">أنشئ حسابك الخاص</p>
+              <small class="text-white text-wrap text-center"
+                >و تمتع بتجربة تسوق استثنائية</small
+              > -->
 			</div>
 		</div>
 	</div>
@@ -351,7 +362,7 @@
 	<!-- partial -->
 	<script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
 	<script src='https://www.parsecdn.com/js/parse-1.6.7.min.js'></script>
-	<script  src="js/profile.js"></script>
+	<!-- <script  src="js/profile.js"></script> -->
 
 </body>
 </html>
