--- a/categories.html
+++ b/categories.html
@@ -24,7 +24,6 @@
     <link rel="stylesheet" href="assets/SwiperJS/css/swiper-bundle.min.css" />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/checkout.css" />
   </head>
 
   <body>
@@ -235,331 +234,121 @@
     </header>
 
     <main>
-      <section class="bg-light py-5">
-        <div class="container">
-          <div class="row flex-column-reverse flex-lg-row">
-            <div class="col-xl-8 col-lg-8 mb-4">
-              <!-- Checkout -->
-              <div class="card shadow-0 border">
-                <div class="p-4">
-                  <h5 class="card-title mb-3">إتمام عملية الشراء</h5>
-                  <div class="row">
-                    <div class="col-6 mb-3">
-                      <p class="mb-0">الاسم الأول</p>
-                      <div class="form-outline">
-                        <input
-                          type="text"
-                          id="typeText"
-                          placeholder="ادخل هنا"
-                          class="form-control"
-                        />
-                      </div>
-                    </div>
-
-                    <div class="col-6">
-                      <p class="mb-0">الاسم الأخير</p>
-                      <div class="form-outline">
-                        <input
-                          type="text"
-                          id="typeText"
-                          placeholder="ادخل هنا"
-                          class="form-control"
-                        />
-                      </div>
-                    </div>
-                    <div class="col-6 mb-3">
-                      <p class="mb-0">رقم التليفون</p>
-                      <div class="form-outline">
-                        <input
-                          type="tel"
-                          id="typePhone"
-                          placeholder="+201XXXXXXXXX "
-                          class="form-control"
-                        />
-                      </div>
-                    </div>
-                    <div class="col-6 mb-3">
-                      <p class="mb-0">رقم التليفون الإضافي</p>
-                      <div class="form-outline">
-                        <input
-                          type="tel"
-                          id="typePhone"
-                          placeholder="+201XXXXXXXXX "
-                          class="form-control"
-                        />
-                      </div>
-                    </div>
-
-                    <div class="col-12 mb-3">
-                      <p class="mb-0">البريد الإلكتروني</p>
-                      <div class="form-outline">
-                        <input
-                          type="email"
-                          id="typeEmail"
-                          placeholder="example@gmail.com"
-                          class="form-control"
-                        />
-                      </div>
-                    </div>
-                  </div>
-
-                  <hr class="my-4" />
-
-                  <h5 class="card-title mb-3">العناوين</h5>
-
-                  <div class="row mb-3">
-                    <div class="col-lg-4 mb-3">
-                      <!-- Default checked radio -->
-                      <div class="form-check h-100 border rounded-3">
-                        <div class="p-3">
-                          <input
-                            class="form-check-input"
-                            type="radio"
-                            name="flexRadioDefault"
-                            id="flexRadioDefault1"
-                            checked
-                          />
-                          <label
-                            class="form-check-label"
-                            for="flexRadioDefault1"
-                          >
-                            القاهرة<br />
-                            <small class="text-muted"
-                              >زهراء مدينة نصر أمام المحكمة العسكرية
-                            </small>
-                          </label>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 mb-3">
-                      <!-- Default radio -->
-                      <div class="form-check h-100 border rounded-3">
-                        <div class="p-3">
-                          <input
-                            class="form-check-input"
-                            type="radio"
-                            name="flexRadioDefault"
-                            id="flexRadioDefault3"
-                          />
-                          <label
-                            class="form-check-label"
-                            for="flexRadioDefault3"
-                          >
-                            الأسكندرية<br />
-                            <small class="text-muted"
-                              >ميامي شارع جلال حماد أعلى مستشفى ميامي
-                            </small>
-                          </label>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-lg-4 mb-3">
-                      <!-- Default radio -->
-                      <div class="form-check h-100 border rounded-3">
-                        <div class="p-3">
-                          <input
-                            class="form-check-input"
-                            type="radio"
-                            name="flexRadioDefault"
-                            id="flexRadioDefault3"
-                          />
-                          <label
-                            class="form-check-label add-address mb-3"
-                            for="flexRadioDefault3"
-                          >
-                            +
-                          </label>
-                          <label
-                            class="form-check-label"
-                            for="flexRadioDefault3"
-                          >
-                            أضف عنوان آخر
-                          </label>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-sm-8 mb-3">
-                      <p class="mb-0">العنوان</p>
-                      <div class="form-outline">
-                        <input
-                          type="text"
-                          id="typeText"
-                          placeholder="ادخل هنا"
-                          class="form-control"
-                        />
-                      </div>
-                    </div>
-
-                    <div class="col-sm-4 mb-3">
-                      <p class="mb-0">المدينة</p>
-                      <div class="form-outline">
-                        <input
-                          type="text"
-                          id="typeText"
-                          placeholder="ادخل هنا"
-                          class="form-control"
-                        />
-                      </div>
-                    </div>
-
-                    <div class="col-sm-4 col-6 mb-3">
-                      <p class="mb-0">المحافظة</p>
-                      <div class="form-outline">
-                        <input
-                          type="text"
-                          id="typeText"
-                          placeholder="ادخل هنا"
-                          class="form-control"
-                        />
-                      </div>
-                    </div>
-                    <div class="col-sm-4 mb-3">
-                      <p class="mb-0">رقم المنزل</p>
-                      <div class="form-outline">
-                        <input
-                          type="text"
-                          id="typeText"
-                          placeholder="ادخل هنا"
-                          class="form-control"
-                        />
-                      </div>
-                    </div>
-
-                    <div class="col-sm-4 col-6 mb-3">
-                      <p class="mb-0">الرقم البريدي</p>
-                      <div class="form-outline">
-                        <input
-                          type="text"
-                          id="typeText"
-                          placeholder="ادخل هنا"
-                          class="form-control"
-                        />
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="mb-3">
-                    <p class="mb-0">رسالة إلى التاجر</p>
-                    <div class="form-outline">
-                      <textarea
-                        class="form-control"
-                        id="textAreaExample1"
-                        rows="2"
-                      ></textarea>
-                    </div>
-                  </div>
-
-                  <div class="float-end checkout-btns">
-                    <button class="cancel-checkout-btn">إلغاء</button>
-                    <button class="checkout-btn">إتمام الشراء</button>
-                  </div>
-                </div>
+      <section class="OffersPage my-5">
+        <div
+          class="container d-flex justify-content-center align-items-start flex-column"
+        >
+          <div
+            class="section-title d-flex align-items-center justify-content-between w-100"
+          >
+            <p class="section-title-name">كل الأقسام</p>
+            <!-- <p class="section-title-link">
+              <a href="categories.html">عرض كل الأقسام</a>
+            </p> -->
+          </div>
+          <div
+            class="category-items-wrapper d-flex justify-content-center align-items-center flex-wrap"
+          >
+            <div class="col-6 col-md-3 p-2">
+              <div
+                class="category-card"
+                onclick="window.location.href='products.html'"
+              >
+                <img src="./images/cat1.jpg" alt="" />
+                <p class="category-name">الملابس الرجالي</p>
               </div>
-              <!-- Checkout -->
             </div>
-            <div
-              class="col-xl-4 col-lg-4 d-flex justify-content-center justify-content-lg-end"
-            >
-              <div class="me-lg-4 mt-4 mt-lg-0" style="max-width: 320px">
-                <h6 class="mb-3">تفاصيل الدفع</h6>
-                <div class="d-flex justify-content-between">
-                  <p class="mb-2">الإجمالي:</p>
-                  <p class="mb-2">3000 جم</p>
-                </div>
-                <div class="d-flex justify-content-between">
-                  <p class="mb-2">خصم:</p>
-                  <p class="mb-2 text-danger">- جم60.00</p>
-                </div>
-                <div class="d-flex justify-content-between">
-                  <p class="mb-2">مصاريف الشحن:</p>
-                  <p class="mb-2">+ 50 جم</p>
-                </div>
-                <hr />
-                <div class="d-flex justify-content-between">
-                  <p class="mb-2">إجمالي المبلغ:</p>
-                  <p class="mb-2 fw-bold">2990 جم</p>
-                </div>
-
-                <div class="input-group mt-3 mb-4">
-                  <input
-                    type="text"
-                    class="form-control border"
-                    name=""
-                    placeholder="برومو كود"
-                  />
-                  <button class="btn text-primary border me-2">استخدام</button>
-                </div>
-
-                <hr />
-                <h6 class="text-dark my-4">منتجات في عربة التسوق</h6>
-
-                <div class="d-flex align-items-center mb-4">
-                  <div class="me-3 position-relative">
-                    <span
-                      class="position-absolute top-0 start-100 translate-middle badge rounded-pill badge-secondary"
-                    >
-                      1
-                    </span>
-                    <img
-                      src="https://bootstrap-ecommerce.com/bootstrap5-ecommerce/images/items/7.webp"
-                      style="height: 96px; width: 96x"
-                      class="img-sm rounded border"
-                    />
-                  </div>
-                  <div class="">
-                    <a href="#" class="nav-link">
-                      Gaming Headset with Mic <br />
-                      Darkblue color
-                    </a>
-                    <div class="price text-muted">الإجمالي:1000 جم</div>
-                  </div>
-                </div>
-
-                <div class="d-flex align-items-center mb-4">
-                  <div class="me-3 position-relative">
-                    <span
-                      class="position-absolute top-0 start-100 translate-middle badge rounded-pill badge-secondary"
-                    >
-                      1
-                    </span>
-                    <img
-                      src="https://bootstrap-ecommerce.com/bootstrap5-ecommerce/images/items/5.webp"
-                      style="height: 96px; width: 96x"
-                      class="img-sm rounded border"
-                    />
-                  </div>
-                  <div class="">
-                    <a href="#" class="nav-link">
-                      Apple Watch Series 4 Space <br />
-                      Large size
-                    </a>
-                    <div class="price text-muted">الإجمالي:1000 جم</div>
-                  </div>
-                </div>
-
-                <div class="d-flex align-items-center mb-4">
-                  <div class="me-3 position-relative">
-                    <span
-                      class="position-absolute top-0 start-100 translate-middle badge rounded-pill badge-secondary"
-                    >
-                      3
-                    </span>
-                    <img
-                      src="https://bootstrap-ecommerce.com/bootstrap5-ecommerce/images/items/1.webp"
-                      style="height: 96px; width: 96x"
-                      class="img-sm rounded border"
-                    />
-                  </div>
-                  <div class="">
-                    <a href="#" class="nav-link"
-                      >GoPro HERO6 4K Action Camera - Black</a
-                    >
-                    <div class="price text-muted">الإجمالي:1000 جم</div>
-                  </div>
-                </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat2.jpg" alt="" />
+                <p class="category-name">الملابس النسائية</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat3.jpg" alt="" />
+                <p class="category-name">الحقائب</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat4.jpg" alt="" />
+                <p class="category-name">الساعات</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat5.jpg" alt="" />
+                <p class="category-name">الأحذية</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat6.jpg" alt="" />
+                <p class="category-name">الاكسسوارات</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat7.jpg" alt="" />
+                <p class="category-name">ملابس الأطفال</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat8.jpg" alt="" />
+                <p class="category-name">العناية الشخصية</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div
+                class="category-card"
+                onclick="window.location.href='products.html'"
+              >
+                <img src="./images/cat1.jpg" alt="" />
+                <p class="category-name">الملابس الرجالي</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat2.jpg" alt="" />
+                <p class="category-name">الملابس النسائية</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat3.jpg" alt="" />
+                <p class="category-name">الحقائب</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat4.jpg" alt="" />
+                <p class="category-name">الساعات</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat5.jpg" alt="" />
+                <p class="category-name">الأحذية</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat6.jpg" alt="" />
+                <p class="category-name">الاكسسوارات</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat7.jpg" alt="" />
+                <p class="category-name">ملابس الأطفال</p>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 p-2">
+              <div class="category-card">
+                <img src="./images/cat8.jpg" alt="" />
+                <p class="category-name">العناية الشخصية</p>
               </div>
             </div>
           </div>
@@ -569,7 +358,7 @@
 
     <!-- Footer Section -->
     <footer id="Footer">
-      <div class="container mلا-5">
+      <div class="container mb-5">
         <div class="text-center text-lg-start text-white pt-5">
           <div class="text-center text-md-end mt-5">
             <div class="row mt-3">
